--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -109,71 +109,21 @@ at the 2.0 quality level or because they are experimental features.</p>
 			<p align="right"><b><i>IN PROGRESS</i></b></p>
 			</td>
 			<td valign="top" width="70%">
-			Task Context<ul>
-				<li>Model has been tuned to avoid having containers such as 
-				packages show on very long-running tasks.</li>
-				<li>Context tab on task editor will now show all elements in the 
-				task context if slid to the left, even ones with very low 
-				interest (i.e. those that decayed in interest long ago)</li>
-				<li>Focus works in Bookmarks view</li>
-				<li>Alt+click unfiltering returns on first non Alt+click mouse 
-				click in the view, preventing the uninteresting stuff from 
-				getting 'stuck'.&nbsp; Ctrl+click is supported after Alt+click 
-				has been used, in order to add multiple elements.</li>
-			</ul>
-			<p>Task List</p>
+			<p>Not adding:</p>
 			<ul>
-				<li>New keybindings, need to review or revise,
-				<a href="http://wiki.eclipse.org/Mylyn_UI_Nits#Keybindings">
-				http://wiki.eclipse.org/Mylyn_UI_Nits#Keybindings</a> </li>
-				<li>Notification popups now fade in and out (Eclipse 3.4 only)</li>
-				<li>Create tasks from a JUnit stack trace</li>
 				<li>Screenshot capture tool improvements</li>
-				<li>Working set query selection is grouped by repository for 
-				both tasks and resources</li>
-				<li>Archive visibility has been improved when working set is 
-				active [nesting Archive by repository might be necessary]</li>
 				<li>Performance improvements</li>
 				<li>Single-click to switch presentations</li>
 				<li>Tool tip improvements: hover over active task link to see 
 				detailed tooltip</li>
-				<li>Create subtasks in Bugzilla (new editor menu action)</li>
-				<li>Open Task dialog performance and usability improvements</li>
-				<li>New Desktop notification popups, enable OpenGL on Linux for 
-				fading</li>
-				<li>Search results can be grouped by owner</li>
 				<li>Repository properties menu</li>
 				<li>Archive: ensure to point out new deletion</li>
 				<li>Warnings on queries</li>
 				<li>Improved Link with Editor behavior [review]</li>
-			</ul>
-			<p>Task Editor</p>
-			<ul>
-				<li>Improved screenshot capture and attachment functionality, 
-				uses non-modal wizard so that Eclipse can be interacted with 
-				while taking screenshots.</li>
 				<li>The attachments table includes filenames and distinguishes 
 				images</li>
 				<li>Comment quotations are colored in order to make them easier 
 				to differentiate.</li>
-				<li>Can create new tasks from comments (and other selections?)</li>
-			</ul>
-			<p>Bugzilla Connector</p>
-			<ul>
-				<li>Support for real names in addition to email addresses (Bugzilla 
-				3.0 and later)</li>
-				<li>Negative expressions for queries</li>
-			</ul>
-			<p>JIRA Connector</p>
-			<ul>
-				<li>Can change assignee on creation</li>
-			</ul>
-			<p>Team</p>
-			<ul>
-				<li>Commit templates can be stored per-project</li>
-			</ul>
-			<p>Developers</p>
-			<ul>
 				<li>The Properties page works for Task List element</li>
 			</ul>
 			</td>
@@ -186,6 +136,329 @@ at the 2.0 quality level or because they are experimental features.</p>
 </table>
 
 <h2>&nbsp;</h2>
+
+<table cellpadding="10" cellspacing="0" id="table373">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Task Context</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<ul>
+				<li>Model has been tuned to avoid having containers such as 
+				packages show on very long-running tasks.</li>
+				<li>
+				<p align="left">Context tab on task editor will now show all elements in the 
+				task context if slid to the left, even ones with very low 
+				interest (i.e. those that decayed in interest long ago)</li>
+			</ul>
+			<p class="MsoPlainText">&nbsp;<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table374">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Alt+Click Navigation</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<ul>
+				<li>
+				<p align="left">Alt+click unfiltering returns on first non Alt+click mouse 
+				click in the view, preventing the uninteresting stuff from 
+				getting 'stuck'.&nbsp; Ctrl+click is supported after Alt+click 
+				has been used, in order to add multiple elements.</li>
+			</ul>
+			<p class="MsoPlainText">&nbsp;<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table375">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Focus for Bookmarks</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">...</p>
+			<p class="MsoPlainText">&nbsp;<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<p class="MsoPlainText">&nbsp;</p>
+<p class="MsoPlainText">&nbsp;</p>
+
+<table cellpadding="10" cellspacing="0" id="table376">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>New Notification Popups</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">Fade is Eclipse 3.4 only.&nbsp; On Linux enable 
+			OpenGL on Linux for fading</p>
+			<p class="MsoPlainText">&nbsp;<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table380">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Task Archive is Gone</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">Archive visibility has been improved when working set is 
+				active [nesting Archive by repository might be necessary].&nbsp; 
+			Discuss how deletino works...</p>
+			<p class="MsoPlainText">&nbsp;<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table377">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Task Navigation Keybindings</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">New keybindings, need to review or revise,
+				<a href="http://wiki.eclipse.org/Mylyn_UI_Nits#Keybindings">
+				http://wiki.eclipse.org/Mylyn_UI_Nits#Keybindings</a> </p>
+			<p class="MsoPlainText">&nbsp;<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table378">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Flexible Task Creation</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">From JUnit Stack Trace, any selected text in the 
+			task editor, Error Log (not new)</p>
+			<p class="MsoPlainText">&nbsp;<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table379">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Easier Working Set Creation</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">Working set query selection is grouped by repository 
+			for both tasks and resources</p>
+			<p class="MsoPlainText">&nbsp;<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table382">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Open Task Dialog Improved</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">Streamlined UI, much faster, other Task List 
+			preformance improvements</p>
+			<p class="MsoPlainText">&nbsp;<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table383">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Search Results Grouping by Owner</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">...</p>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table384">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Screenshot Capture Improved</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">Improved screenshot capture and attachment functionality, 
+				uses non-modal wizard so that Eclipse can be interacted with 
+				while taking screenshots.</p>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table385">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Comment Coloring</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">in task editor...</p>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<p>&nbsp;</p>
+
+<table cellpadding="10" cellspacing="0" id="table381">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Subtask Creation</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">from editor for Bugzilla</p>
+			<p class="MsoPlainText">&nbsp;<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table386">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Support for Real Names</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<ul>
+				<li>Support for real names in addition to email addresses (Bugzilla 
+				3.0 and later)</li>
+			</ul>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table387">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Negative Expressions for Queries</b></p>
+			</td>
+			<td valign="top" width="70%">
+			Can be useful for excluding...<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<p class="MsoPlainText">&nbsp;</p>
+
+<table cellpadding="10" cellspacing="0" id="table388">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Change Assignee on Creation</b></p>
+			</td>
+			<td valign="top" width="70%">
+			JIRA...<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<p class="MsoPlainText">&nbsp;</p>
+
+<table cellpadding="10" cellspacing="0" id="table389">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Commit Comment Templates</b></p>
+			</td>
+			<td valign="top" width="70%">
+			Can be configured per-project<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<p class="MsoPlainText">&nbsp;</p>
 <h2><a name="task-list">Task List</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table365">
