--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -107,29 +107,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 -->
 <hr>
 
-<p>&nbsp; </p>
 <h2><a name="task-list">Task List</a></h2>
-
-<table cellpadding="10" cellspacing="0" id="table376">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>New Notification Popups</b></p>
-			</td>
-			<td valign="top" width="70%">
-			<p align="left">The rendering of the notification popups has been 
-			improved, and on Eclipse 3.4 the popups fade into and out of view 
-			(Compositing window manager required on Linux).&nbsp; The popups can 
-			be interacted with and will not disappear when the mouse is over 
-			them.&nbsp; Click the incoming arrow to mark the task read, or the 
-			hyperlink to open the task.&nbsp;&nbsp; </p><p class="MsoPlainText">
-			<img border="0" src="images/2.2/tasklist-notification.png"></td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-</table>
 
 <table cellpadding="10" cellspacing="0" id="table380">
 		<tr>
@@ -157,6 +135,27 @@ at the 2.0 quality level or because they are experimental features.</p>
 			</ul>
 			<p class="MsoPlainText">
 			<img border="0" src="images/2.2/tasklist-archive.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table376">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>New Notification Popups</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">The rendering of the notification popups has been 
+			improved, and on Eclipse 3.4 the popups fade into and out of view 
+			(Compositing window manager required on Linux).&nbsp; The popups can 
+			be interacted with and will not disappear when the mouse is over 
+			them.&nbsp; Click the incoming arrow to mark the task read, or the 
+			hyperlink to open the task.&nbsp;&nbsp; </p><p class="MsoPlainText">
+			<img border="0" src="images/2.2/tasklist-notification.png"></td>
 		</tr>
 		<tr>
 			<td colspan="2">
@@ -639,7 +638,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 			<p align="right"><b>Subtask Creation</b></p>
 			</td>
 			<td valign="top" width="70%">
-			<p align="left">from editor for Bugzilla, subtask handling improved</p>
+			<p align="left">Subtasks can be created from the editor's toolbar, 
+			bypassing the new task creation wizard.</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/2.2/bugzilla-subtasks.png"></td>
 		</tr>
@@ -656,11 +656,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 			<p align="right"><b>Support for Real Names</b></p>
 			</td>
 			<td valign="top" width="70%">
-			<ul>
-				<li>Support for real names in addition to email addresses (Bugzilla 
-				3.0 and later)</li>
-			</ul>
-			<p class="MsoPlainText">
+			Real names are now support for Bugzilla versions of 3.0 and later.&nbsp; 
+			Hover over the name to see the email address.<p class="MsoPlainText">
 			<img border="0" src="images/2.2/bugzilla-real-names.png"></td>
 		</tr>
 		<tr>
