ASSIGNED - bug 194875: manage eclipse.org/mylyn web site content https://bugs.eclipse.org/bugs/show_bug.cgi?id=194875

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -107,6 +107,15 @@ at the 2.0 quality level or because they are experimental features.</p>
 -->
 <hr>
 
+<p>See <span style="background-color: #E0D0E6">what's new</span> for:</p>
+<ul>
+	<li><a href="#task-list">Task List</a></li>
+	<li><a href="#task-editor">Task Editor</a></li>
+	<li><a href="#focused-ui">Task-Focused UI</a></li>
+	<li><a href="#bugzilla">Bugzilla Connector</a></li>
+	<li><a href="#trac">Trac Connector</a></li>
+	<li><a href="#jira">JIRA Connector</a></li>
+</ul>
 <h2><a name="task-list">Task List</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table380">
@@ -368,7 +377,110 @@ at the 2.0 quality level or because they are experimental features.</p>
 </table>
 
 <h2>&nbsp;</h2>
-<h2><a name="task-list5">Task-Focused UI</a></h2>
+<h2><a name="task-editor">Task Editor</a></h2>
+
+<table cellpadding="10" cellspacing="0" id="table390">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Create Task from Text Selection</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">A new task can be created from any selection in the 
+			task editor.</p>
+			<p class="MsoPlainText">
+			<img border="0" src="images/2.2/task-from-comment.png"><p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table385">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Comment Coloring</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">Quoted comments are colored to make them stand out 
+			from other comment text.</p>
+			<p class="MsoPlainText">
+			<img border="0" src="images/2.2/comment-coloring.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table384">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Screenshot Capture Improved</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">Screenshot capture has been improved, and now uses a 
+			non-modal wizard, so that you can interact with Eclipse in order to 
+			prepare the screenshot.&nbsp; In order to attach a screenshot to a 
+			repository task, use <i>Task Editor -&gt; Attachments -&gt; Attach File...
+			</i>and choose <i>Screenshot</i> as the attachment source.&nbsp; 
+			You can then use the <i>Capture</i> button one or more times in 
+			order to grab your entire desktop.&nbsp; In order to only submit a 
+			part of the desktop, create a crop rectangle by dragging the mouse, 
+			then submit the screenshot.&nbsp; Use the<i> Fit image </i>button in 
+			order to zoom in to see the screenshot at its native resolution.&nbsp; 
+			Screenshots are attached in the JPEG format.</p>
+			<p class="MsoPlainText">
+			<img border="0" src="images/2.2/screenshot-capture.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table357">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
+			<p align="right"><b>Spelling Proposals</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p class="MsoPlainText">Spelling proposals and dictionary additions 
+			can now be invoked via Ctrl+1 in the <i>Task Editor</i>.<p class="MsoPlainText">
+			<img border="0" src="images/2.1M1/spelling-corrections.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table359">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
+			<p align="right"><b>Hyperlink Hovers</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p class="MsoPlainText">Hyperlink hovers showing task descriptions 
+			are now available in more places than previously, including in the
+			<i>New Comment</i> area of the task editor.&nbsp; Hyperlinks are now 
+			available from task summary fields, along with spell checking.<p class="MsoPlainText">
+			<img border="0" src="images/2.1M1/task-editor-hyperlinks.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<p class="MsoPlainText">&nbsp; </p>
+<h2><a name="focused-ui">Task-Focused UI</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table373">
 		<tr>
@@ -526,111 +638,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 </table>
 
 <h2>&nbsp;</h2>
-<h2><a name="task-list2">Task Editor</a></h2>
 
-<table cellpadding="10" cellspacing="0" id="table390">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Create Task from Text Selection</b></p>
-			</td>
-			<td valign="top" width="70%">
-			<p align="left">A new task can be created from any selection in the 
-			task editor.</p>
-			<p class="MsoPlainText">
-			<img border="0" src="images/2.2/task-from-comment.png"><p class="MsoPlainText">
-			&nbsp;</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-</table>
-
-<table cellpadding="10" cellspacing="0" id="table385">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Comment Coloring</b></p>
-			</td>
-			<td valign="top" width="70%">
-			<p align="left">Quoted comments are colored to make them stand out 
-			from other comment text.</p>
-			<p class="MsoPlainText">
-			<img border="0" src="images/2.2/comment-coloring.png"></td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-</table>
-
-<table cellpadding="10" cellspacing="0" id="table384">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Screenshot Capture Improved</b></p>
-			</td>
-			<td valign="top" width="70%">
-			<p align="left">Screenshot capture has been improved, and now uses a 
-			non-modal wizard, so that you can interact with Eclipse in order to 
-			prepare the screenshot.&nbsp; In order to attach a screenshot to a 
-			repository task, use <i>Task Editor -&gt; Attachments -&gt; Attach File...
-			</i>and choose <i>Screenshot</i> as the attachment source.&nbsp; 
-			You can then use the <i>Capture</i> button one or more times in 
-			order to grab your entire desktop.&nbsp; In order to only submit a 
-			part of the desktop, create a crop rectangle by dragging the mouse, 
-			then submit the screenshot.&nbsp; Use the<i> Fit image </i>button in 
-			order to zoom in to see the screenshot at its native resolution.&nbsp; 
-			Screenshots are attached in the JPEG format.</p>
-			<p class="MsoPlainText">
-			<img border="0" src="images/2.2/screenshot-capture.png"></td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-</table>
-
-<table cellpadding="10" cellspacing="0" id="table357">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>Spelling Proposals</b></p>
-			</td>
-			<td valign="top" width="70%">
-			<p class="MsoPlainText">Spelling proposals and dictionary additions 
-			can now be invoked via Ctrl+1 in the <i>Task Editor</i>.<p class="MsoPlainText">
-			<img border="0" src="images/2.1M1/spelling-corrections.png"></td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-</table>
-
-<table cellpadding="10" cellspacing="0" id="table359">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>Hyperlink Hovers</b></p>
-			</td>
-			<td valign="top" width="70%">
-			<p class="MsoPlainText">Hyperlink hovers showing task descriptions 
-			are now available in more places than previously, including in the
-			<i>New Comment</i> area of the task editor.&nbsp; Hyperlinks are now 
-			available from task summary fields, along with spell checking.<p class="MsoPlainText">
-			<img border="0" src="images/2.1M1/task-editor-hyperlinks.png"></td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-</table>
-
-<p class="MsoPlainText">&nbsp; </p>
-
-<h2><a name="task-list1">Bugzilla Connector</a></h2>
+<h2><a name="bugzilla">Bugzilla Connector</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table381">
 		<tr>
@@ -721,7 +730,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 </table>
 
 <p class="MsoPlainText">&nbsp; </p>
-<h2><a name="task-list3">Trac Connector</a></h2>
+<h2><a name="trac">Trac Connector</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table362">
 		<tr>
@@ -742,7 +751,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 </table>
 
 <p class="MsoPlainText">&nbsp;</p>
-<h2><a name="task-list4">JIRA</a> Connector</h2>
+<h2><a name="jira">JIRA Connector</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table388">
 		<tr>
@@ -799,7 +808,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 </table>
 
 <p class="MsoPlainText">&nbsp;</p>
-<h2><a name="task-list0">XPlanner Connector</a></h2>
+<h2><a name="xplanner">XPlanner Connector</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table356">
 		<tr>
