NEW - bug 214309: warn user when committing a task to a non-associated source repository https://bugs.eclipse.org/bugs/show_bug.cgi?id=214309

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -21,7 +21,8 @@
 		bugs with Bugzilla and the task editor. Willian Mitsuda contributed to 
 		screenshot capture and provided several other improvements. Maarten 
 		Meijer provided performance improvements and tests. Shawn Minto provided 
-		task context and UI fixes.&nbsp; Additional useful contributions, fixes 
+		task context and UI fixes.&nbsp; Benjamin Pasero provided the 
+		notification popup shell rendering. Additional useful contributions, fixes 
 		and patches were provided by Helen Bershadskaya, Leo Dos Santos, Michael 
 		Valenta, Kevin Bracey, Chris Aniszczyk, George Lindholm, Jakum 
 		Jurkiewicz, Ketan Padegoankar and Nathan Hapke.</font></td>
@@ -106,6 +107,20 @@ at the 2.0 quality level or because they are experimental features.</p>
 </ul>
 -->
 <hr>
+
+<table cellpadding="10" cellspacing="0" id="table392">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>In Progress</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<ul>
+				<li>Warnings when attempting to commit resources across task 
+				repositories</li>
+			</ul>
+			</td>
+		</tr>
+</table>
 
 <p>See <span style="background-color: #E0D0E6">what's new</span> for: </p>
 <ul>
