--- a/new/new.html
+++ b/new/new.html
@@ -21,7 +21,8 @@
 		bugs with Bugzilla and the task editor. Willian Mitsuda contributed to 
 		screenshot capture and provided several other improvements. Maarten 
 		Meijer provided performance improvements and tests. Shawn Minto provided 
-		task context and UI fixes.&nbsp; Additional useful contributions, fixes 
+		task context and UI fixes.&nbsp; Benjamin Pasero provided the 
+		notification popup shell rendering. Additional useful contributions, fixes 
 		and patches were provided by Helen Bershadskaya, Leo Dos Santos, Michael 
 		Valenta, Kevin Bracey, Chris Aniszczyk, George Lindholm, Jakum 
 		Jurkiewicz, Ketan Padegoankar and Nathan Hapke.</font></td>
