RESOLVED - bug 214739: New & Noteworthy for 2.2 mentions cached configuration, but option is absent from bugzilla connector https://bugs.eclipse.org/bugs/show_bug.cgi?id=214739

--- a/new/new.html
+++ b/new/new.html
@@ -717,11 +717,11 @@ at the 2.0 quality level or because they are experimental features.</p>
 			<p align="right"><b>Configuration Caching</b></p>
 			</td>
 			<td valign="top" width="70%">
-			<p class="MsoPlainText">This option can reduce network bandwidth for 
-			very repositories that provide the configuration caching mechanism 
-			(currently only bugs.eclipse.org).&nbsp; This option is recommended 
-			for bugs.eclipse.org users.<p class="MsoPlainText">
-			<img border="0" src="images/2.1M1/bugzilla-cached-config.png"></td>
+			<p align="left">If
+			<a href="http://wiki.eclipse.org/Mylyn_User_Guide#Tips_for_server_administrators">
+			supported by the server</a>, the Bugzilla configuration is retrieved 
+			from a cached copy.&nbsp; This can significantly reduce network 
+			traffic on very large repositories such as bugs.eclipse.org.</td>
 		</tr>
 		<tr>
 			<td colspan="2">
