--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -111,12 +111,13 @@ at the 2.0 quality level or because they are experimental features.</p>
 <table cellpadding="10" cellspacing="0" id="table392">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>In Progress</b></p>
+			<p align="right"><b>IN PROGRESS</b></p>
 			</td>
 			<td valign="top" width="70%">
 			<ul>
 				<li>Warnings when attempting to commit resources across task 
 				repositories</li>
+				<li>Strikethrough fonts for dependent bugs</li>
 			</ul>
 			</td>
 		</tr>
@@ -731,11 +732,11 @@ at the 2.0 quality level or because they are experimental features.</p>
 			<p align="right"><b>Configuration Caching</b></p>
 			</td>
 			<td valign="top" width="70%">
-			<p class="MsoPlainText">This option can reduce network bandwidth for 
-			very repositories that provide the configuration caching mechanism 
-			(currently only bugs.eclipse.org).&nbsp; This option is recommended 
-			for bugs.eclipse.org users.<p class="MsoPlainText">
-			<img border="0" src="images/2.1M1/bugzilla-cached-config.png"></td>
+			<p class="MsoPlainText">If
+			<a href="http://wiki.eclipse.org/Mylyn_User_Guide#Tips_for_server_administrators">
+			supported by the server</a>, the Bugzilla configuration is retrieved 
+			from a cached copy.&nbsp; This can significantly reduce network 
+			traffic on very large repositories such as bugs.eclipse.org.</td>
 		</tr>
 		<tr>
 			<td colspan="2">
