RESOLVED - bug 214836: task working sets not filtered from package explorer https://bugs.eclipse.org/bugs/show_bug.cgi?id=214836

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -118,6 +118,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>Warnings when attempting to commit resources across task 
 				repositories</li>
 				<li>Strikethrough fonts for dependent bugs</li>
+				<li>Bugzilla: improved synchronization performance</li>
+				<li>Bugzilla: query on multiple email fields</li>
 			</ul>
 			</td>
 		</tr>
