RESOLVED - bug 215379: show number of entries under group nodes in task search results in Search view https://bugs.eclipse.org/bugs/show_bug.cgi?id=215379

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -120,6 +120,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>Strikethrough fonts for dependent bugs</li>
 				<li>Bugzilla: improved synchronization performance</li>
 				<li>Bugzilla: query on multiple email fields</li>
+				<li>Task Search: groupings show number, ...</li>
 			</ul>
 			</td>
 		</tr>
