NEW - bug 206566: improve the usability of scheduling and workweek focus and get rid of "red Mondays" https://bugs.eclipse.org/bugs/show_bug.cgi?id=206566

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -115,6 +115,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 			</td>
 			<td valign="top" width="70%">
 			<ul>
+				<li>Major Task Editor performance improvements, especially for 
+				editor open</li>
 				<li>Warnings when attempting to commit resources across task 
 				repositories</li>
 				<li>Strikethrough fonts for dependent bugs</li>
