RESOLVED - bug 215071: [patch] report as Bug should include subentries too https://bugs.eclipse.org/bugs/show_bug.cgi?id=215071

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -123,6 +123,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>Bugzilla: improved synchronization performance</li>
 				<li>Bugzilla: query on multiple email fields</li>
 				<li>Task Search: groupings show number, ...</li>
+				<li>Minor: report as bug includes sub-entries if present [needs 
+				UI review]</li>
 			</ul>
 			</td>
 		</tr>
