--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -125,6 +125,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>Task Search: groupings show number, ...</li>
 				<li>Minor: report as bug includes sub-entries if present [needs 
 				UI review]</li>
+				<li>Local tasks can be promoted to repository tasks via clone</li>
 			</ul>
 			</td>
 		</tr>
