NEW - bug 206566: improve the usability of scheduling and workweek focus and get rid of "red Mondays" https://bugs.eclipse.org/bugs/show_bug.cgi?id=206566

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -119,7 +119,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 				editor open</li>
 				<li>Warnings when attempting to commit resources across task 
 				repositories</li>
-				<li>Strikethrough fonts for dependent bugs</li>
+				<li>Strikethrough fonts for dependent bugs and in task editor 
+				comments</li>
 				<li>Bugzilla: improved synchronization performance</li>
 				<li>Bugzilla: query on multiple email fields</li>
 				<li>Task Search: groupings show number, ...</li>
