*** empty log message ***

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -114,6 +114,11 @@ at the 2.0 quality level or because they are experimental features.</p>
 			<p align="right"><b>IN PROGRESS</b></p>
 			</td>
 			<td valign="top" width="70%">
+			Need UI review:<ul>
+				<li>Reversing of comment ordering</li>
+				<li>Minor: report as bug includes sub-entries if present</li>
+			</ul>
+			<p>Done:</p>
 			<ul>
 				<li>Major Task Editor performance improvements, especially for 
 				editor open</li>
@@ -124,8 +129,6 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>Bugzilla: improved synchronization performance</li>
 				<li>Bugzilla: query on multiple email fields</li>
 				<li>Task Search: groupings show number, ...</li>
-				<li>Minor: report as bug includes sub-entries if present [needs 
-				UI review]</li>
 				<li>Local tasks can be promoted to repository tasks via clone</li>
 			</ul>
 			</td>
