*** empty log message ***

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -115,6 +115,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 			</td>
 			<td valign="top" width="70%">
 			Need UI review:<ul>
+				<li>Revised task scheduling</li>
 				<li>Reversing of comment ordering</li>
 				<li>Minor: report as bug includes sub-entries if present</li>
 			</ul>
