*** empty log message ***

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -118,6 +118,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>Revised task scheduling</li>
 				<li>Reversing of comment ordering</li>
 				<li>Minor: report as bug includes sub-entries if present</li>
+				<li>JIRA: wiki markup supported</li>
 			</ul>
 			<p>Done:</p>
 			<ul>
@@ -131,6 +132,22 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>Bugzilla: query on multiple email fields</li>
 				<li>Task Search: groupings show number, ...</li>
 				<li>Local tasks can be promoted to repository tasks via clone</li>
+			</ul>
+			<p>XPlanner:</p>
+			<ul>
+				<li>The XPlanner connector now allows using Mylyn's automatic 
+				time tracking to be incorporated in the actual time setting for 
+				an XPlanner task. The XPlanner Task editor actions section has a 
+				checkbox that allows the user to turn automatic time tracking on 
+				or off (default is off). There are also options for allowing the 
+				automatically tracked time to be added to or replace the current 
+				actual time (default is adding -- actual update is done when the 
+				Submit button is pressed), and rounding the automatically 
+				tracked time to the nearest half hour (default is to round). The 
+				user still has the option of putting in actual time manually, 
+				however, if automatic actual time tracking is enabled, the last 
+				entered user value will be overridden with the latest tracked 
+				time.</li>
 			</ul>
 			</td>
 		</tr>
