*** empty log message ***

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -130,8 +130,10 @@ at the 2.0 quality level or because they are experimental features.</p>
 				comments</li>
 				<li>Bugzilla: improved synchronization performance</li>
 				<li>Bugzilla: query on multiple email fields</li>
-				<li>Task Search: groupings show number, ...</li>
+				<li>Task Search: groupings show number [should we make this show 
+				up in lighter color?]</li>
 				<li>Local tasks can be promoted to repository tasks via clone</li>
+				<li>Bugzilla: file sizes are shown</li>
 			</ul>
 			<p>XPlanner:</p>
 			<ul>
@@ -147,7 +149,9 @@ at the 2.0 quality level or because they are experimental features.</p>
 				user still has the option of putting in actual time manually, 
 				however, if automatic actual time tracking is enabled, the last 
 				entered user value will be overridden with the latest tracked 
-				time.</li>
+				time.<br>
+				<a href="https://bugs.eclipse.org/bugs/attachment.cgi?id=87934">
+				https://bugs.eclipse.org/bugs/attachment.cgi?id=87934</a> </li>
 			</ul>
 			</td>
 		</tr>
