NEW - bug 217360: support focusing of the new 3.4M5 Problems view https://bugs.eclipse.org/bugs/show_bug.cgi?id=217360

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -119,6 +119,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>Reversing of comment ordering</li>
 				<li>Minor: report as bug includes sub-entries if present</li>
 				<li>JIRA: wiki markup supported</li>
+				<li>Focusing of All Markers view is supported (should we 
+				suppress showing empty grouping nodes?)</li>
 			</ul>
 			<p>Done:</p>
 			<ul>
