RESOLVED - bug 194360: [patch] add action to task editor to compare attachments https://bugs.eclipse.org/bugs/show_bug.cgi?id=194360

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -121,6 +121,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>JIRA: wiki markup supported</li>
 				<li>Focusing of All Markers view is supported (should we 
 				suppress showing empty grouping nodes?)</li>
+				<li>Attachment can be compared (add icon?)</li>
 			</ul>
 			<p>Done:</p>
 			<ul>
