*** empty log message ***

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -130,6 +130,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>Focusing of All Markers view is supported (should we 
 				suppress showing empty grouping nodes?)</li>
 				<li>Attachment can be compared (add icon?)</li>
+				<li>Screenshot markup and preview</li>
+				<li>Linking with editor improved</li>
 			</ul>
 			<p>Done:</p>
 			<ul>
