--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -179,11 +179,29 @@ at the 2.0 quality level or because they are experimental features.</p>
 	<li><a href="#trac">Trac Connector</a></li>
 	<li><a href="#jira">JIRA Connector</a></li>
 </ul>
-<h2><a name="task-list">Task List</a></h2>
+<h2><a name="task-list">Task List</a><br>
+&nbsp;</h2>
+
+<table cellpadding="10" cellspacing="0" id="table393">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>...</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">...</p>
+			<p class="MsoPlainText">
+			<img border="0" src="images/2.2/tasklist-archive.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
 
 <table cellpadding="10" cellspacing="0" id="table380">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Task Archive is Gone</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -217,7 +235,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table376">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>New Notification Popups</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -238,7 +256,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table378">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Create Task from JUnit Failure</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -257,7 +275,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table379">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Easier Working Set Creation</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -280,7 +298,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table382">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Open Task Dialog Improved</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -298,7 +316,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table383">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Search Results Grouping by Owner</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -316,7 +334,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table377">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Task Navigation Key Bindings</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -444,7 +462,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table390">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Create Task from Text Selection</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -463,7 +481,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table385">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Comment Coloring</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -481,7 +499,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table384">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Screenshot Capture Improved</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -547,7 +565,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table373">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Task Context</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -570,7 +588,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table375">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Focus for Bookmarks</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -589,7 +607,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table389">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Commit Comment Templates</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -607,7 +625,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table374">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Alt+click Navigation</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -706,7 +724,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table381">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Subtask Creation</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -724,7 +742,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table386">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Support for Real Names</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -818,7 +836,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table388">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Change Assignee on Creation</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -835,7 +853,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table391">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Password Prompting</b></p>
 			</td>
 			<td valign="top" width="70%">
