*** empty log message ***

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -123,30 +123,34 @@ at the 2.0 quality level or because they are experimental features.</p>
 			</td>
 			<td valign="top" width="70%">
 			Need UI review:<ul>
-				<li>Revised task scheduling</li>
-				<li>Reversing of comment ordering</li>
 				<li>Minor: report as bug includes sub-entries if present</li>
+				<li>Screenshot markup and preview</li>
 				<li>JIRA: wiki markup supported</li>
 				<li>Focusing of All Markers view is supported (should we 
 				suppress showing empty grouping nodes?)</li>
-				<li>Attachment can be compared (add icon?)</li>
-				<li>Screenshot markup and preview</li>
-				<li>Linking with editor improved</li>
+				<li>Minor: Attachment can be compared (add icon?)</li>
 			</ul>
 			<p>Done:</p>
 			<ul>
-				<li>Major Task Editor performance improvements, especially for 
-				editor open</li>
+				<li>Revised task scheduling</li>
+				<li>Performance improvements: fully lazy startup, Task List 
+				start performance, Task Editor opening, query synchronization, 
+				Focused UI refresh</li>
 				<li>Warnings when attempting to commit resources across task 
 				repositories</li>
-				<li>Strikethrough fonts for dependent bugs and in task editor 
+				<li>minor: Strikethrough fonts for dependent bugs and in task editor 
 				comments</li>
-				<li>Bugzilla: improved synchronization performance</li>
 				<li>Bugzilla: query on multiple email fields</li>
 				<li>Task Search: groupings show number [should we make this show 
 				up in lighter color?]</li>
 				<li>Local tasks can be promoted to repository tasks via clone</li>
 				<li>Bugzilla: file sizes are shown</li>
+				<li>Web connector has &quot;review web page&quot;</li>
+				<li>Drag and drop of task editor</li>
+				<li>Trac recognizes custom priority levels</li>
+				<li>Trac connector grouping of subtasks</li>
+				<li>Open task dialog filtering of working sets (add to existing 
+				item)</li>
 			</ul>
 			<p>XPlanner:</p>
 			<ul>
@@ -165,6 +169,10 @@ at the 2.0 quality level or because they are experimental features.</p>
 				time.<br>
 				<a href="https://bugs.eclipse.org/bugs/attachment.cgi?id=87934">
 				https://bugs.eclipse.org/bugs/attachment.cgi?id=87934</a> </li>
+				<li>211101: XPlanner's actual time setting should be able to use 
+				Mylyn's time tracking mechanism<br>
+				<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=211101">
+				https://bugs.eclipse.org/bugs/show_bug.cgi?id=211101</a> </li>
 			</ul>
 			</td>
 		</tr>
