RESOLVED - bug 224055: Ability to create new task directly from in-place task views https://bugs.eclipse.org/bugs/show_bug.cgi?id=224055

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -82,43 +82,12 @@ Mylyn 0.3</a></b></p>
 <p><b>Updating</b>:&nbsp; If using a version prior to 2.0, upgrade to 2.0 
 before installing Mylyn 2.3.</p>
 
-<!--
-
-<p><b>Update Notes</b> <br>
-&nbsp;&nbsp;&nbsp; - We recommend using the Eclipse 3.3M7 release due to the 
-numerous UI improvements (see Eclipse 3.3 only items below).<br>
-&nbsp;&nbsp;&nbsp; - 2.0M2 and later releases will reset your task activity 
-timings (Mylyn now uses a new and much more robust timing mechanism).<br>
-&nbsp;&nbsp;&nbsp; - The offline task data cache will be reset, so submit outgoing changes before 
-	updating.<br>
-&nbsp;&nbsp;&nbsp; - If upgrading from a 0.x version, first update to Mylyn 1.0 
-and see the corresponding <a href="http://eclipse.org/mylyn/doc/new-1.0.html">
-update notes</a>.<br>
-&nbsp;&nbsp;&nbsp; - Trac xml-rpc users: you will
-<a href="http://wiki.eclipse.org/index.php/Mylyn_FAQ#Trac_Connector">need the 
-latest</a> XmlRpcPlugin.<br>&nbsp;</p>
-
-<p><b>Mylar -&gt; Mylyn Migration</b></p>
+<p><b>In progress for 3.0</b></p>
 <ul>
-	<li>No uninstall necessary during the update, the old plug-ins will 
-	automatically be disabled.</li>
-	<li>Can delete all old plug-ins/features either manually or via the Update 
-	Manager.</li>
-	<li>All Mylyn preferences will need to be reset.&nbsp; If you set a custom 
-	data directory this will need to be reset on start.</li>
-	<li>Project to Task Repository associations will need to be reset.</li>
+	<li>Task editor content assist proposals</li>
+	<li>Content assist in Bugzilla search page</li>
+	<li>Can create new tasks from the Open Task dialog</li>
 </ul>
-<p><b>UI Cleanup</b></p>
-<p>The following things have moved into the Sandbox either because they are not 
-at the 2.0 quality level or because they are experimental features.</p>
-<ul>
-	<li>Pause Context Capture</li>
-	<li>Active Task on open</li>
-	<li>Synchronize view style overlays</li>
-	<li>Task Activity report</li>
-	<li>Legend moved to view menu</li>
-</ul>
--->
 <hr>
 
 <p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 2.3</span> </p>
@@ -131,6 +100,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 	<li><a href="#jira">JIRA Connector (2)</a></li>
 	<li><a href="#xplanner">XPlanner Connector (1)</a></li>
 </ul>
+
 <h2><a name="task-list">Task List</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table393">
