RESOLVED - bug 224055: Ability to create new task directly from in-place task views https://bugs.eclipse.org/bugs/show_bug.cgi?id=224055

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -87,6 +87,8 @@ before installing Mylyn 2.3.</p>
 	<li>Task editor content assist proposals</li>
 	<li>Content assist in Bugzilla search page</li>
 	<li>Can create new tasks from the Open Task dialog</li>
+	<li>bug 221965 ?</li>
+	<li>Task editor content assist works for multiple comma-delimited entries</li>
 </ul>
 <hr>
 
