RESOLVED - bug 225172: [patch] contribute filter to search view https://bugs.eclipse.org/bugs/show_bug.cgi?id=225172

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -90,6 +90,13 @@ before installing Mylyn 2.3.</p>
 	<li>bug 221965 ?</li>
 	<li>Task editor content assist works for multiple comma-delimited entries</li>
 </ul>
+
+<p><b>Review</b></p>
+<ul>
+	<li>Find box on search view</li>
+	<li>Content assist for the task editor</li>
+</ul>
+
 <hr>
 
 <p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 2.3</span> </p>
