REOPENED - bug 216049: Mylyn NPE in eclipse log file. https://bugs.eclipse.org/bugs/show_bug.cgi?id=216049

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -82,7 +82,7 @@ Mylyn 0.3</a></b></p>
 <p><b>Updating</b>:&nbsp; If using a version prior to 2.0, upgrade to 2.0 
 before installing Mylyn 2.3.</p>
 
-<p><b>In progress for 3.0</b></p>
+<p><b>IN PROGRESS FOR 3.0</b></p>
 <ul>
 	<li>Task editor content assist proposals</li>
 	<li>Content assist in Bugzilla search page</li>
@@ -91,7 +91,7 @@ before installing Mylyn 2.3.</p>
 	<li>Task editor content assist works for multiple comma-delimited entries</li>
 </ul>
 
-<p><b>Review</b></p>
+<p><b>TO REVIEW FOR 3.0</b></p>
 <ul>
 	<li>Find box on search view</li>
 	<li>Content assist for the task editor</li>
